--- a/bank/WebContent/zhfw/glzhgl.html
+++ b/bank/WebContent/zhfw/glzhgl.html
@@ -23,7 +23,7 @@
     <body class="skin-blue">
         <!-- header logo: style can be found in header.less -->
         <header class="header">
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <!-- Add the class icon to your logo image or logo icon to add the margining -->
                 AdminLTE
             </a>
@@ -319,17 +319,15 @@
                             </ul>
                         </li>
                         <li class="treeview">
-                            <a href="#">
+                           <a href="#">
                                 <i class="fa fa-laptop"></i>
-                                <span>UI Elements</span>
+                                <span>账户服务</span>
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                                <li><a href="UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                                <li><a href="UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                                <li><a href="UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                                <li><a href="UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
+                                <li><a href="glzhgl.html"><i class="fa fa-angle-double-right"></i> 关联账户管理 </a></li>
+                                <li><a href="gs.html"><i class="fa fa-angle-double-right"></i> 账户服务 </a></li>
+                                <li><a href="mmxg.html"><i class="fa fa-angle-double-right"></i> 密码修改</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -459,7 +457,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="#">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="#">网上交易查询</td>
+												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
 											</tr>
 											<tr>
 											    <td><input type="checkbox"></td>
@@ -468,7 +466,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="#">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#">网上交易查询</td>
+												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
 											</tr>
 											<tr>
 											    <td><input type="checkbox"></td>
@@ -477,7 +475,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="#">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="#">网上交易查询</td>
+												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
 											</tr>
 											<tr>
 											    <td><input type="checkbox"></td>
@@ -486,7 +484,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="#">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="#">网上交易查询</td>
+												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
 											</tr>
 												
   									　　　</tbody>
