老王的页面修改

--- a/bank/WebContent/zhfw/glzhgl.html
+++ b/bank/WebContent/zhfw/glzhgl.html
@@ -23,9 +23,9 @@
     <body class="skin-blue">
         <!-- header logo: style can be found in header.less -->
         <header class="header">
-            <a href="../index.html" class="logo">
+            <a href="../index.jsp" class="logo">
                 <!-- Add the class icon to your logo image or logo icon to add the margining -->
-                AdminLTE
+                爆炸银行
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -326,8 +326,8 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="glzhgl.html"><i class="fa fa-angle-double-right"></i> 关联账户管理 </a></li>
-                                <li><a href="gs.html"><i class="fa fa-angle-double-right"></i> 账户服务 </a></li>
-                                <li><a href="mmxg.html"><i class="fa fa-angle-double-right"></i> 密码修改</a></li>
+                                <li><a href="gs.jsp"><i class="fa fa-angle-double-right"></i> 账户服务 </a></li>
+                                <li><a href="mmxg.jsp"><i class="fa fa-angle-double-right"></i> 密码修改</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -457,7 +457,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
+												<td><a href="zhmx.jsp">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.jsp">网上交易查询</td>
 											</tr>
 											<tr>
 											    <td><input type="checkbox"></td>
@@ -466,7 +466,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
+												<td><a href="zhmx.jsp">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.jsp">网上交易查询</td>
 											</tr>
 											<tr>
 											    <td><input type="checkbox"></td>
@@ -475,7 +475,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
+												<td><a href="zhmx.jsp">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.jsp">网上交易查询</td>
 											</tr>
 											<tr>
 											    <td><input type="checkbox"></td>
@@ -484,7 +484,7 @@
 												<td>肇庆西江支行</td>
 												<td>校园卡</td>
 												<td>1000000000.00</td>
-												<td><a href="zhmx.html">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.html">网上交易查询</td>
+												<td><a href="zhmx.jsp">明细查询</a><small>&nbsp;|&nbsp;</small><a href="#"><a href="wsjycx.jsp">网上交易查询</td>
 											</tr>
 												
   									　　　</tbody>
