--- a/bank/WebContent/creditCard/xykgl.html
+++ b/bank/WebContent/creditCard/xykgl.html
@@ -318,18 +318,16 @@
                                 <li><a href="charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
                             </ul>
                         </li>
-                        <li class="treeview">
-                            <a href="#">
+                       	<li class="treeview">
+                             <a href="#">
                                 <i class="fa fa-laptop"></i>
-                                <span>UI Elements</span>
+                                <span>账户服务</span>
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                                <li><a href="UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                                <li><a href="UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                                <li><a href="UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                                <li><a href="UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
+                                 <li><a href="../zhfw/glzhgl.html"><i class="fa fa-angle-double-right"></i> 关联账户管理 </a></li>
+                                <li><a href="../zhfw/gs.jsp"><i class="fa fa-angle-double-right"></i> 账户服务 </a></li>
+                                <li><a href="../zhfw/mmxg.jsp"><i class="fa fa-angle-double-right"></i> 密码修改</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
