--- a/bank/WebContent/zhfw/glzhgl.html
+++ b/bank/WebContent/zhfw/glzhgl.html
@@ -343,12 +343,12 @@
                         </li>
                         <li class="treeview">
                             <a href="#">
-                                <i class="fa fa-table"></i> <span>Tables</span>
+                                <i class="glyphicon glyphicon-tags"></i> <span>信用卡</span>
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
-                                <li><a href="tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
+                                <li><a href="../creditCard/sqjd.html"><i class="glyphicon glyphicon-tag"></i>申请进度查询</a></li>
+                                <li><a href="../creditCard/xykgl.html"><i class="glyphicon glyphicon-tag"></i>信用卡管理</a></li>
                             </ul>
                         </li>
                         <li>
