--- a/bank/WebContent/zhfw/glzhgl.html
+++ b/bank/WebContent/zhfw/glzhgl.html
@@ -606,7 +606,7 @@
 					url:'../DelContorller',
 					data:$("#del").serialize(),
 					success:function(data){
-						window.location.reload;
+						window.location.reload();
 					}
 				})
 			})
